tooling/nargo_cli/tests/snapshots/execution_success/diamond_deps_0/execute__tests__force_brillig_false_inliner_-9223372036854775808_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: true
exit_code: 0
----- stdout -----
[diamond_deps_0] Circuit output: Field(7)
----- stderr -----
warning: RESOLVE_THIS is private and not visible from the current module
  ┌─ src/main.nr:3:11
  │
3 │ use dep2::RESOLVE_THIS;
  │           ------------ RESOLVE_THIS is private
  │
