tooling/nargo_cli/tests/snapshots/execution_success/diamond_deps_0/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v1: Field, v2: Field):
    (no terminator instruction)
}
[diamond_deps_0] Circuit output: 0x07
